fixes of the day r-4-6-4 (#9470)
* updated app version (#9469)

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

* Bruce/r 4 6 4 cfixes (#9476)

* fixed typo

* fixed org import error

* added title column on contract excel import table

---------

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

* downgraded ng-rive to 0.2.4 and forced RIVE_VERSION to 1.1.6 (#9479)

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

* fix "pay" and "usa" like issues (#9478)

* fix "pay" and "usa" like issues

* fix PR comments

---------

Co-authored-by: Bruce <eelios@gmail.com>

---------

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>
Co-authored-by: Nicolas GERMAIN <78768220+n-germain-work@users.noreply.github.com>

--- a/libs/ui/src/lib/static-autocomplete/group/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.html
@@ -45,14 +45,14 @@
             >{{ group.label }}
           </mat-checkbox>
           <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
-            <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'" id="centered"></mat-icon>
+            <mat-icon [svgIcon]="visible[group.label] ? 'expand_less' : 'expand_more'" id="centered"></mat-icon>
           </button>
         </div>
         <mat-option
           *ngFor="let item of group.items"
           [value]="item"
           class="item"
-          [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
+          [ngClass]="{ hidden: !selectable[item] || !visible[group.label] }"
           [attr.test-id]="item"
         >
           {{ item | toLabel: scope }}
@@ -66,7 +66,7 @@
     *ngIf="control.value.length && control.value.length !== items.length"
     mat-icon-button
     type="button"
-    matTooltip="See list"
+    matTooltip="See details"
     (click)="openGroupModal()"
   >
     <mat-icon svgIcon="document"></mat-icon>
