added link to contracts from sales-map

--- a/libs/waterfall/src/lib/components/sales-map/sales-map.component.html
+++ b/libs/waterfall/src/lib/components/sales-map/sales-map.component.html
@@ -75,11 +75,11 @@
               </span>
             </li>
           </ul>
-          <a mat-button color="primary" class="main-dashboard-cta">
+          <a mat-button color="primary" class="main-dashboard-cta" [routerLink]="['document', infos.rootContract]">
             <mat-icon svgIcon="document_signed"></mat-icon>
             <span>See Contract</span>
           </a>
-          <a *ngFor="let child of infos.childContracts" mat-button color="primary" class="main-dashboard-cta">
+          <a *ngFor="let child of infos.childContracts" mat-button color="primary" class="main-dashboard-cta" [routerLink]="['document', child]">
             <mat-icon svgIcon="document_signed"></mat-icon>
             <span>See Amendment</span>
           </a>
