--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -143,6 +143,11 @@
           <ng-template colRef="payload.percent" label="%" let-percent>
             {{ percent ? percent * 100  : '--' }}
           </ng-template>
+          <ng-template colRef="" label="Action" let-action sticky>
+            <a mat-icon-button target="_blank" [routerLink]="['/c/o/dashboard/crm/waterfall', waterfall.id, 'block', action.blockId, 'action', action.actionId]" (click)="$event.stopPropagation()">
+              <mat-icon svgIcon="launch"></mat-icon>
+            </a>
+          </ng-template>
         </bf-table>
       </ng-container>
 
