--- a/libs/waterfall/src/lib/components/edit/edit.component.html
+++ b/libs/waterfall/src/lib/components/edit/edit.component.html
@@ -63,16 +63,16 @@
     <mat-step>
       <ng-template matStepLabel>Add Contracts</ng-template>
       <ng-template matStepContent>
-        <waterfall-contracts-form [movieId]="movieId"></waterfall-contracts-form>
+        <waterfall-contracts-form [movieId]="movieId" (skip)="skip()"></waterfall-contracts-form>
         <section>
           <ng-container *ngIf="updating$ | async; else editContracts">
             <logo-spinner></logo-spinner>
           </ng-container>
           <ng-template #editContracts>
-            <button mat-flat-button color="primary">
+            <a mat-flat-button color="primary" [routerLink]="['..']">
               <span>Continue</span>
               <mat-icon svgIcon="arrow_forward"></mat-icon>
-            </button>
+            </a>
           </ng-template>
         </section>
       </ng-template>
