--- a/apps/waterfall/waterfall/src/app/dashboard/title/dashboard/dashboard.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
 <!-- TODO remove the image form the assets folder -->
-<img src="/assets/images/demo-cannes/contracts.png" />
+<img src="/assets/images/demo-cannes/Dashboard.svg" />
