--- a/apps/waterfall/waterfall/src/app/dashboard/title/view/view.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/view/view.component.html
@@ -2,7 +2,7 @@
   <movie-cta fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" fxFlex>
     <a mat-button color="primary" [routerLink]="['/c/o/dashboard/waterfall', movie.id, 'right-holders']" class="main-dashboard-cta">
       <mat-icon svgIcon="group"></mat-icon>
-      <span>Rights Holders Management</span>
+      <span>Manage Waterfall</span>
     </a>
   </movie-cta>
 </title-dashboard-shell>
