--- a/libs/waterfall/src/lib/components/forms/document-form/form.component.html
+++ b/libs/waterfall/src/lib/components/forms/document-form/form.component.html
@@ -74,14 +74,20 @@
 <ng-container *ngIf="toggleTermsControl.value">
   <ng-container *ngFor="let term of form.get('terms').controls">
     <div class="group">
-      <static-select [control]="term.get('medias')" scope="medias" mode="outline" prefixIcon="play_arrow" multiple required>
-        <mat-label>Choose Media</mat-label>
-        <mat-error>This field is mandatory</mat-error>
-      </static-select>
-      <static-select [control]="term.get('territories')" scope="territories" mode="outline" prefixIcon="world" multiple required>
-        <mat-label>Choose Territories</mat-label>
-        <mat-error>This field is mandatory</mat-error>
-      </static-select>
+      <group-multiselect
+        scope="medias"
+        label="Choose Media"
+        displayAll="World"
+        filterPlaceholder="Specify territories to filter"
+        [control]="term.get('medias')"
+      ></group-multiselect>
+      <group-multiselect
+        scope="territories"
+        label="Choose Territories"
+        displayAll="World"
+        filterPlaceholder="Specify territories to filter"
+        [control]="term.get('territories')"
+      ></group-multiselect>
       <mat-checkbox color="primary" [formControl]="term.get('exclusive')">Exclusive</mat-checkbox>
     </div>
   </ng-container>
