--- a/libs/waterfall/src/lib/components/state-reader/state-reader.component.html
+++ b/libs/waterfall/src/lib/components/state-reader/state-reader.component.html
@@ -1,27 +1,27 @@
 <mat-toolbar *rxIf="state">
-  <button mat-button color="primary">{{ state.date | date: 'MM/dd/yyyy' }}</button>
+  <button mat-button color="primary">{{ state.name }} - {{ state.date | date: 'dd/MM/yyyy' }}</button>
 
-  <button mat-button color="primary" [matMenuTriggerFor]="actions">Actions</button>
+  <button mat-button color="primary" *ngIf="state.actions.length" [matMenuTriggerFor]="actions">Actions</button>
   <mat-menu #actions="matMenu">
     <button *rxFor="let action of state.actions" mat-menu-item (click)="details('Action', action.name, action.payload)" >{{ action.actionId }} - {{ action.name }}</button>
   </mat-menu>
 
-  <button mat-button color="primary" [matMenuTriggerFor]="rights">Rights</button>
+  <button mat-button color="primary" *ngIf="(state.rights | keyvalue).length" [matMenuTriggerFor]="rights">Rights</button>
   <mat-menu #rights="matMenu">
     <button *rxFor="let right of state.rights | keyvalue" mat-menu-item (click)="details('Right', right.key, right.value)" >{{ right.key }}</button>
   </mat-menu>
 
-  <button mat-button color="primary" [matMenuTriggerFor]="horizontals">Horizontal groups</button>
+  <button mat-button color="primary" *ngIf="(state.horizontals | keyvalue).length" [matMenuTriggerFor]="horizontals">Horizontal groups</button>
   <mat-menu #horizontals="matMenu">
     <button *rxFor="let horizontal of state.horizontals | keyvalue" mat-menu-item (click)="details('Horizontal group', horizontal.key, horizontal.value)" >{{ horizontal.key }}</button>
   </mat-menu>
 
-  <button mat-button color="primary" [matMenuTriggerFor]="verticals">Vertical groups</button>
+  <button mat-button color="primary" *ngIf="(state.verticals | keyvalue).length" [matMenuTriggerFor]="verticals">Vertical groups</button>
   <mat-menu #verticals="matMenu">
     <button *rxFor="let vertical of state.verticals | keyvalue" mat-menu-item (click)="details('Vertical group', vertical.key, vertical.value)" >{{ vertical.key }}</button>
   </mat-menu>
 
-  <button mat-button color="primary" [matMenuTriggerFor]="pools">Pools</button>
+  <button mat-button color="primary" *ngIf="(state.pools | keyvalue).length" [matMenuTriggerFor]="pools">Pools</button>
   <mat-menu #pools="matMenu">
     <button *rxFor="let pool of state.pools | keyvalue" mat-menu-item (click)="details('Pool', pool.key, pool.value)" >{{ pool.key }}</button>
   </mat-menu>
