--- a/libs/waterfall/src/lib/components/g6/graph/graph.component.html
+++ b/libs/waterfall/src/lib/components/g6/graph/graph.component.html
@@ -23,34 +23,40 @@
       </h4>
       <p>
         <strong>Right Id:</strong> {{ right.id }}<br>
-        <strong>Right Revenu:</strong> {{ right.revenu | currency }}<br>
-        <strong>Right Turnover:</strong> {{ right.turnover | currency }}<br>
+        <strong>Right Calculated Revenu:</strong> {{ right.revenu.calculated | currency:currency }}<br>
+        <strong>Right Calculated Turnover:</strong> {{ right.turnover.calculated | currency:currency }}<br>
+        <strong>Right Actual Revenu:</strong> {{ right.revenu.actual | currency:currency }}<br>
+        <strong>Right Actual Turnover:</strong> {{ right.turnover.actual | currency:currency }}<br>
         <strong>Right Percent:</strong> {{ right.percent | percent: '1.0-2' }}<br>
       </p>
     </ng-container>
     <ng-container *ngIf="transfer">
       <h4>{{ transfer.from }} -> {{ transfer.to }}</h4>
-      <p>Total: {{ transfer.amount | currency }}</p>
+      <p>Total: {{ transfer.amount | currency:currency }}</p>
       <ul>
-        <li *rxFor="let value of transfer.history">{{ value.amount| currency }}</li>
+        <li *rxFor="let value of transfer.history">{{ value.amount | currency:currency }}</li>
       </ul>
     </ng-container>
     <ng-container *ngIf="org">
       <h4>{{ getRightholderName(org.id) }}</h4>
       <p>
-        <strong>Org Revenu:</strong> {{ org.revenu | currency }}<br>
-        <strong>Org Turnover:</strong> {{ org.turnover | currency }}<br>
-        <strong>Org Investment:</strong> {{ org.investment | currency }}<br>
-        <strong>Org Expense:</strong> {{ org.expense | currency }}<br>
-        <strong>Org Bonus:</strong> {{ org.bonus | currency }}
+        <strong>Org Calculated Revenu:</strong> {{ org.revenu.calculated | currency:currency }}<br>
+        <strong>Org Calculated Turnover:</strong> {{ org.turnover.calculated | currency:currency }}<br>
+        <strong>Org Actual Revenu:</strong> {{ org.revenu.actual | currency:currency }}<br>
+        <strong>Org Actual Turnover:</strong> {{ org.turnover.actual | currency:currency }}<br>
+        <strong>Org Investment:</strong> {{ org.investment | currency:currency }}<br>
+        <strong>Org Expense:</strong> {{ org.expense | currency:currency }}<br>
+        <strong>Org Bonus:</strong> {{ org.bonus | currency:currency }}
       </p>
     </ng-container>
     <ng-container *ngIf="verticalGroup">
       <h4>{{ verticalGroup.id }}</h4>
       <p>
         <strong>Right Id:</strong> {{ verticalGroup.id }}<br>
-        <strong>Right Revenu:</strong> {{ verticalGroup.revenu | currency }}<br>
-        <strong>Right Turnover:</strong> {{ verticalGroup.turnover | currency }}<br>
+        <strong>Right Calculated Revenu:</strong> {{ verticalGroup.revenu.calculated | currency:currency }}<br>
+        <strong>Right Calculated Turnover:</strong> {{ verticalGroup.turnover.calculated | currency:currency }}<br>
+        <strong>Right Actual Revenu:</strong> {{ verticalGroup.revenu.actual | currency:currency }}<br>
+        <strong>Right Actual Turnover:</strong> {{ verticalGroup.turnover.actual | currency:currency }}<br>
         <strong>Right Percent:</strong> {{ verticalGroup.percent | percent: '1.0-2' }}<br>
       </p>
     </ng-container>
@@ -63,8 +69,10 @@
       </h4>
       <p>
         <strong>Right Id:</strong> {{ horizontalGroup.id }}<br>
-        <strong>Right Revenu:</strong> {{ horizontalGroup.revenu | currency }}<br>
-        <strong>Right Turnover:</strong> {{ horizontalGroup.turnover | currency }}<br>
+        <strong>Right Calculated Revenu:</strong> {{ horizontalGroup.revenu.calculated | currency:currency }}<br>
+        <strong>Right Calculated Turnover:</strong> {{ horizontalGroup.turnover.calculated | currency:currency }}<br>
+        <strong>Right Actual Revenu:</strong> {{ horizontalGroup.revenu.actual | currency:currency }}<br>
+        <strong>Right Actual Turnover:</strong> {{ horizontalGroup.turnover.actual | currency:currency }}<br>
         <strong>Right Percent:</strong> {{ horizontalGroup.percent | percent: '1.0-2' }}<br>
       </p>
     </ng-container>
