--- a/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.scss
@@ -14,6 +14,10 @@ h3 {
 
 section {
   display: flex;
-  align-items: center;
   gap: 16px;
+  justify-content: space-between;
+
+  apx-chart {
+    width: 30%;
+  }
 }
